syntax = "proto3";
option java_multiple_files = true;
package com.acuver.kpl.inventory_components;

message ReserveInventoryRequest {
  repeated ReserveInventory inventory = 1;
}

message ReserveInventory {
  string productId = 1;
  string orderId = 2;
  int32 quantity = 3;
}

message ReserveInventoryListResponse {
  repeated ReserveInventoryResponse invResponse = 1;
}

message ReserveInventoryResponse {
  string productId = 1;
  bool success = 2;
  string orderId = 3;
}

service InventoryService {
  rpc ReserveInventory(ReserveInventoryRequest) returns (ReserveInventoryListResponse);
}